# bdslw60_langchain

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
bdsl_llm_correction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
configs/: data_bdslw60.yaml  default.yaml  eval.yaml  model_bilstm_attn.yaml  model_internvideo.yaml  model_internvideo_fast.yaml  model_stformer.yaml  model_stformer_fast.yaml  model_stformer_from_codes.yaml  model_videomae.yaml  model_videomae_fast.yaml  model_videomae_from_codes.yaml  model_vivit.yaml  model_vivit_fast.yaml  model_vivit_from_codes.yaml
data/landmarks/: U2W2F.npz  U4W1F.npz  U4W2F.npz  U5W1F.npz  U5W2F.npz
data/preprocessed/: dataset_info.json
data/processed/: U10W1F.npz  U1W10F.npz  U1W1F.npz  U1W2F.npz  U1W3F.npz  U1W4F.npz  U1W5F.npz  U1W6F.npz  U1W7F.npz  U1W8F.npz  U1W9F.npz  U2W10F.npz  U2W1F.npz  U2W2F.npz  U2W3F.npz  U2W4F.npz  U2W5F.npz  U2W6F.npz  U2W7F.npz  U2W8F.npz  U2W9F.npz  U3W1F.npz  U3W2F.npz  U4W1F.npz  U4W2F.npz  U5W1F.npz  U5W2F.npz
docs/: SIGN_LANGUAGE_TRAINING_GUIDE.md
notebooks/: 01_data_overview.ipynb  02_pose_quality_check.ipynb
predictions/: best_model_predictions_summary.json  predictions_summary.json
predictions/bilstm/: U10W1F.txt  U1W10F.txt  U1W1F.txt  U1W2F.txt  U1W3F.txt  U1W4F.txt  U1W5F.txt  U1W6F.txt  U1W7F.txt  U1W8F.txt  U1W9F.txt  U2W10F.txt  U2W1F.txt  U2W2F.txt  U2W3F.txt  U2W4F.txt  U2W5F.txt  U2W6F.txt  U2W7F.txt  U2W8F.txt  U2W9F.txt  U3W1F.txt  U3W2F.txt  U4W1F.txt  U4W2F.txt  U5W1F.txt  U5W2F.txt  bilstm_predictions_summary.json  predictions_summary.json
predictions/videomae/: U10W1F.txt  U1W10F.txt  U1W1F.txt  U1W2F.txt  U1W3F.txt  U1W4F.txt  U1W5F.txt  U1W6F.txt  U1W7F.txt  U1W8F.txt  U1W9F.txt  U2W10F.txt  U2W1F.txt  U2W2F.txt  U2W3F.txt  U2W4F.txt  U2W5F.txt  U2W6F.txt  U2W7F.txt  U2W8F.txt  U2W9F.txt  U3W1F.txt  U3W2F.txt  U4W1F.txt  U4W2F.txt  U5W1F.txt  U5W2F.txt  videomae_predictions_summary.json
predictions/vivit/: U10W1F.txt  U1W10F.txt  U1W1F.txt  U1W2F.txt  U1W3F.txt  U1W4F.txt  U1W5F.txt  U1W6F.txt  U1W7F.txt  U1W8F.txt  U1W9F.txt  U2W10F.txt  U2W1F.txt  U2W2F.txt  U2W3F.txt  U2W4F.txt  U2W5F.txt  U2W6F.txt  U2W7F.txt  U2W8F.txt  U2W9F.txt  U3W1F.txt  U3W2F.txt  U4W1F.txt  U4W2F.txt  U5W1F.txt  U5W2F.txt  vivit_predictions_summary.json
scripts/: build_sequences.py  demo_server.py  evaluate.py  evaluate_trained.py  example_usage.py  extract_landmarks_standalone.py  extract_pose.py  predict.py  predict_signs.py  prepare_bdslw60.py  preprocess_data.py  process_rqe_standalone.py  train.py  train_simple.py  train_standalone.py  train_videomae.py  train_with_preprocessing.py
src/: __init__.py
src/data/: __init__.py  bdslw60.py  collate.py  mediapipe_mock.py  mediapipe_runner.py
src/inference/: __init__.py  predictor.py
src/models/: __init__.py  bilstm_attn.py  factory.py  internvideo.py  st_former.py  stformer_adapter.py  videomae.py  videomae_adapter.py  vivit.py  vivit_adapter.py
src/training/: __init__.py  augment.py  loop.py  optimizer.py
src/utils/: __init__.py  io.py  logging.py  metrics.py  rqe.py  seed.py  viz.py
tests/: test_data_pipeline.py  test_metrics.py  test_models_smoke.py
